# prompt_plot

./: .envrc  .gitignore  CLAUDE.md  INSTALLATION.md  LICENSE  Makefile  README.md  TESTING_SUMMARY.md  TEST_FAILURES_SUMMARY.md  TODO.md  coverage.xml  generate_llm_advanced.py  generate_llm_advanced_first_code.py  lines.nc  llm_stream_advanced.py  llm_stream_simple.py  pyproject.toml  pytest.ini  setup.py  test.py  test_basic.py  test_cli.py  test_demo.py  test_llm_stream.py
.kiro/specs/pen-plotter-v3/: design.md
archive/: MANIFEST.in  requirements-test.txt  requirements.txt  run_tests.py
archive/.kiro/specs/pen-plotter-v2/: design.md  requirements.md  tasks.md
archive/.kiro/specs/pen-plotter-v3/: requirements.md  tasks.md
archive/boilerplates/: generate_llm_simple.py  test.py
archive/docs-v2/: LLM_PROVIDER_SUMMARY.md  api_reference.rst  conf.py  configuration.rst  getting_started.rst  troubleshooting.rst  workflows.rst
archive/examples-v2/: demo_cli.py  demo_llm_streaming.py  demo_llm_to_plotter.py  demo_llm_to_plotter_simple.py  demo_plotter_connection.py
archive/examples-v2/basic/: README.md  hardware_connection.py  workflow_comparison.py
archive/examples-v2/file_conversion/: README.md  svg_to_gcode.py
archive/examples-v2/sample_files/: simple_commands.gcode  triangle.gcode
archive/examples-v2/tutorials/: README.md  getting_started.md
archive/results/: README.md
archive/results/demo_reports/: comprehensive_report_20251211_165748.html  comprehensive_report_20251211_165751.json
archive/results/gcode/: .gitkeep  gcode_20250225_143413.txt  gcode_20250225_143626.txt  gcode_20250225_145604.txt  gcode_20250227_134911.txt  lines.gcode
archive/results/reports/: comprehensive_report_20251211_172215.html  session_report_20251211_181224.json
archive/results/visualizations/: gcode_workflow_sequential.html  gcode_workflow_simple.html  gcode_workflow_streamer_advanced.html  gcode_workflow_streamer_simple.html  stream_commands_flow.mmd
boilerplates/: README.md
docs/: DEPLOYMENT.md  ENHANCED_VISUALIZATION_SUMMARY.md  architecture.md  configuration.md  examples.md  examples.rst  file_conversion.rst  hardware.md  index.rst  llm-providers.md  postprocessing.md  requirements.txt  roadmap.md
examples/: README.md  demo_comprehensive.py  demo_llm_generation.py  demo_llm_to_plotter.py  demo_visualization.py  enhanced_visualization_demo.py  llm_demo.py  llm_provider_usage.py  quick_start.py  simple_demo.py
examples/basic/: multiple_shapes.py  simple_drawing.py
examples/sample_files/: README.md  development.yaml  star.gcode
notebooks/: test.ipynb
promptplot/: __init__.py  _version.py  checkpoint.py  cli.py  config.py  engine.py  examples.json  llm.py  logger.py  memory.py  models.py  pipeline.py  plotter.py  postprocess.py  scoring.py  tui.py  visualizer.py  workflow.py
promptplot/config/: __init__.py  profiles.py  runtime.py  settings.py
promptplot/converters/: __init__.py  dxf_converter.py  file_detector.py  gcode_loader.py  hpgl_converter.py  image_converter.py  json_converter.py  svg_converter.py
promptplot/core/: __init__.py  base_workflow.py  exceptions.py  models.py
promptplot/llm/: __init__.py  plot_context.py  plot_llm.py  providers.py  templates.py
promptplot/plotter/: __init__.py  base.py  serial_plotter.py  simulated.py  visualizer.py
promptplot/strategies/: __init__.py  non_orthogonal.py  orthogonal.py  selector.py
promptplot/utils/: __init__.py  file_helpers.py  logging.py  math_helpers.py  path_helpers.py  performance.py  rich_logger.py  validation.py
promptplot/vision/: __init__.py  feedback.py  plot_analyzer.py
promptplot/visualization/: __init__.py  interactive_visualizer.py  progress_monitor.py  visual_reporter.py  visualization_manager.py
promptplot/workflows/: __init__.py  advanced_sequential.py  advanced_streaming.py  file_plotting.py  plot_enhanced.py  simple_batch.py  simple_streaming.py
results/demo_reports/: comprehensive_report_20251211_165750.json
results/reports/: comprehensive_report_20251211_172216.json  session_report_20251211_181125.json
results/visualizations/: .gitkeep  command_execution_flow.mmd  continue_generation_flow.mmd  gcode_validation_flow.mmd
tests/: __init__.py  conftest.py  test_bounds.py  test_checkpoint.py  test_connection_state.py  test_curves.py  test_diagnosis.py  test_engine.py  test_live_draw.py  test_memory.py  test_models.py  test_multimodal.py  test_multipass.py  test_pen_state.py  test_pipeline.py  test_planning.py  test_plotter.py  test_postprocess.py  test_prompt.py  test_scoring.py  test_temperature.py  test_tui.py  test_visualizer.py
tests/fixtures/: sample_files.py
tests/integration/: test_cli_integration.py  test_configuration_integration.py  test_end_to_end_workflows.py  test_error_handling.py  test_performance_benchmarks.py
tests/unit/: test_core_models.py  test_file_converters.py  test_llm_providers.py  test_plotter_interfaces.py  test_strategies.py
tests/utils/: gcode_utils.py  mocks.py
