[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "promptplot"
dynamic = ["version"]
description = "Advanced LLM-controlled pen plotter system with computer vision integration"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "PromptPlot Team", email = "team@promptplot.dev"},
]
maintainers = [
    {name = "PromptPlot Team", email = "team@promptplot.dev"},
]
keywords = [
    "plotter",
    "gcode",
    "llm", 
    "ai",
    "computer-vision",
    "automation",
    "cnc",
    "drawing",
    "pen-plotter",
    "generative-art"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education", 
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Artistic Software",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    # Core framework
    "pydantic>=2.0.0,<3.0.0",
    "typing-extensions>=4.0.0",
    "dataclasses-json>=0.5.7",
    
    # LLM integration
    "llama-index-core>=0.10.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-llms-ollama>=0.1.0",
    "openai>=1.0.0",
    
    # Async and networking
    "aiohttp>=3.8.0",
    "aiofiles>=0.8.0",
    "httpx>=0.24.0",
    
    # Visualization and image processing
    "matplotlib>=3.5.0,<4.0.0",
    "pillow>=9.0.0,<11.0.0",
    "numpy>=1.21.0,<2.0.0",
    
    # Serial communication
    "pyserial>=3.5,<4.0",
    "pyserial-asyncio>=0.6",
    
    # File format support
    "svglib>=1.4.0",
    "ezdxf>=0.17.0",
    "reportlab>=3.6.0",
    
    # Configuration and CLI
    "pyyaml>=6.0",
    "click>=8.0.0",
    "colorama>=0.4.4",
    "rich>=12.0.0",
    
    # Utilities
    "python-dateutil>=2.8.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-html>=3.1.0",
    "pytest-watch>=4.2.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "pylint>=2.15.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pre-commit>=2.20.0",
    "bump2version>=1.0.0",
    "twine>=4.0.0",
    "build>=0.8.0",
]

# Documentation
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "myst-parser>=0.18.0",
    "sphinx-copybutton>=0.5.0",
]

# Azure OpenAI support
azure = [
    "azure-identity>=1.12.0",
    "azure-keyvault-secrets>=4.6.0",
    "azure-storage-blob>=12.14.0",
]

# Local LLM support
ollama = [
    "ollama>=0.1.0",
    "requests>=2.28.0",
]

# Computer vision enhancements
vision = [
    "opencv-python>=4.5.0",
    "scikit-image>=0.19.0",
    "imageio>=2.22.0",
]

# Performance optimizations
performance = [
    "numba>=0.56.0",
    "cython>=0.29.0",
    "psutil>=5.9.0",
    "memory-profiler>=0.60.0",
    "line-profiler>=4.0.0",
]

# Hardware integration (Raspberry Pi)
hardware = [
    "RPi.GPIO>=0.7.1; platform_machine=='armv7l'",
    "gpiozero>=1.6.2; platform_machine=='armv7l'", 
    "adafruit-circuitpython-motor>=3.4.0; platform_machine=='armv7l'",
]

# Web interface (future)
web = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=10.4",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

# Testing utilities
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-html>=3.1.0",
    "factory-boy>=3.2.0",
    "faker>=18.0.0",
]

# All optional dependencies (excluding platform-specific)
all = [
    # Include all extras except hardware and platform-specific ones
    "azure-identity>=1.12.0",
    "azure-keyvault-secrets>=4.6.0", 
    "azure-storage-blob>=12.14.0",
    "ollama>=0.1.0",
    "requests>=2.28.0",
    "opencv-python>=4.5.0",
    "scikit-image>=0.19.0",
    "imageio>=2.22.0",
    "numba>=0.56.0",
    "psutil>=5.9.0",
    "memory-profiler>=0.60.0",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=10.4",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/promptplot/promptplot"
Documentation = "https://promptplot.readthedocs.io/"
Repository = "https://github.com/promptplot/promptplot.git"
"Bug Reports" = "https://github.com/promptplot/promptplot/issues"
Changelog = "https://github.com/promptplot/promptplot/blob/main/CHANGELOG.md"
Funding = "https://github.com/sponsors/promptplot"

[project.scripts]
promptplot = "promptplot.cli:main"
promptplot-config = "promptplot.config.cli:main"
promptplot-convert = "promptplot.converters.cli:main"

[project.gui-scripts]
promptplot-gui = "promptplot.gui:main"

[project.entry-points."promptplot.plugins"]
# Plugin system for extensibility
example-plugin = "promptplot.plugins.example:ExamplePlugin"

# Hatch configuration for version management
[tool.hatch.version]
source = "vcs"
raw-options = {local_scheme = "no-local-version"}

[tool.hatch.build.hooks.vcs]
version-file = "promptplot/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["promptplot"]
exclude = [
    "tests/",
    "boilerplates/",
    "examples/",
    "docs/",
    "*.md",
    "Makefile",
]

[tool.hatch.build.targets.sdist]
include = [
    "promptplot/",
    "tests/",
    "examples/",
    "docs/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
    "requirements*.txt",
    "Makefile",
]

# Tool configurations
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | boilerplates
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["boilerplates/*"]

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "W0613",  # Unused argument
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "llama_index.*",
    "matplotlib.*",
    "cv2.*",
    "serial.*",
    "ollama.*",
    "azure.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=promptplot",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for complete workflows", 
    "slow: Tests that take longer to run",
    "requires_llm: Tests that require LLM provider access",
    "requires_hardware: Tests that require actual plotter hardware",
    "visual: Tests involving image processing or visualization",
    "benchmark: Performance benchmark tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["promptplot"]
omit = [
    "*/tests/*",
    "*/boilerplates/*",
    "*/examples/*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "boilerplates", "examples"]
skips = ["B101", "B601"]

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

# UV-specific configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.uv.sources]
# Use local development versions for testing
# promptplot = { path = ".", editable = true }

# Performance and build optimizations
[tool.setuptools_scm]
write_to = "promptplot/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

# Package data and resources
[tool.hatch.build]
include = [
    "promptplot/**/*.py",
    "promptplot/**/*.yaml",
    "promptplot/**/*.json",
    "promptplot/**/*.txt",
    "promptplot/config/defaults/*",
    "promptplot/config/profiles/*",
    "promptplot/templates/*",
]
exclude = [
    "*.pyc",
    "__pycache__/",
    "*.so",
    ".git/",
    ".pytest_cache/",
    "htmlcov/",
]

# Environment-specific configurations
[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-benchmark>=4.0.0",
]

[tool.hatch.envs.docs]
dependencies = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.18.0",
]

[tool.hatch.envs.lint]
dependencies = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]