[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "promptplot"
dynamic = ["version"]
description = "LLM-driven pen plotter GCode generator"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "PromptPlot Team", email = "team@promptplot.dev"},
]
maintainers = [
    {name = "PromptPlot Team", email = "team@promptplot.dev"},
]
keywords = [
    "plotter",
    "gcode",
    "llm", 
    "ai",
    "computer-vision",
    "automation",
    "cnc",
    "drawing",
    "pen-plotter",
    "generative-art"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education", 
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Artistic Software",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    # Core
    "pydantic>=2.0.0,<3.0.0",

    # LLM integration
    "llama-index-core>=0.10.0",
    "llama-index-llms-ollama>=0.1.0",

    # Serial communication
    "pyserial>=3.5,<4.0",
    "pyserial-asyncio>=0.6",

    # CLI and display
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyfiglet>=0.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

viz = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

openai = [
    "llama-index-llms-openai>=0.1.0",
    "openai>=1.0.0",
]

azure = [
    "llama-index-llms-azure-openai>=0.1.0",
]

gemini = [
    "llama-index-llms-gemini>=0.1.0",
    "google-generativeai>=0.3.0",
]

vision = [
    "llama-index-multi-modal-llms-openai>=0.1.0",
    "llama-index-multi-modal-llms-gemini>=0.1.0",
    "Pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/promptplot/promptplot"
Documentation = "https://promptplot.readthedocs.io/"
Repository = "https://github.com/promptplot/promptplot.git"
"Bug Reports" = "https://github.com/promptplot/promptplot/issues"
Changelog = "https://github.com/promptplot/promptplot/blob/main/CHANGELOG.md"
Funding = "https://github.com/sponsors/promptplot"

[project.scripts]
promptplot = "promptplot.cli:main"

# Hatch configuration for version management
[tool.hatch.version]
source = "vcs"
raw-options = {local_scheme = "no-local-version"}

[tool.hatch.build.hooks.vcs]
version-file = "promptplot/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["promptplot"]
exclude = [
    "tests/",
    "archive/",
    "docs/",
    "*.md",
    "Makefile",
]

[tool.hatch.build.targets.sdist]
include = [
    "promptplot/",
    "tests/",
    "docs/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "Makefile",
]

# Tool configurations
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | archive
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["archive/*"]

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "W0613",  # Unused argument
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "llama_index.*",
    "matplotlib.*",
    "cv2.*",
    "serial.*",
    "ollama.*",
    "azure.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=promptplot",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for complete workflows", 
    "slow: Tests that take longer to run",
    "requires_llm: Tests that require LLM provider access",
    "requires_hardware: Tests that require actual plotter hardware",
    "visual: Tests involving image processing or visualization",
    "benchmark: Performance benchmark tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["promptplot"]
omit = [
    "*/tests/*",
    "*/archive/*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "archive"]
skips = ["B101", "B601"]

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

# UV-specific configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.uv.sources]
# Use local development versions for testing
# promptplot = { path = ".", editable = true }

# Performance and build optimizations
[tool.setuptools_scm]
write_to = "promptplot/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

# Package data and resources
[tool.hatch.build]
include = [
    "promptplot/**/*.py",
    "promptplot/**/*.yaml",
    "promptplot/**/*.json",
    "promptplot/**/*.txt",
]
exclude = [
    "*.pyc",
    "__pycache__/",
    "*.so",
    ".git/",
    ".pytest_cache/",
    "htmlcov/",
]

# Environment-specific configurations
[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-benchmark>=4.0.0",
]

[tool.hatch.envs.docs]
dependencies = []

[tool.hatch.envs.lint]
dependencies = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]